feat(executable): install required dll

--- a/executable/CMakeLists.txt
+++ b/executable/CMakeLists.txt
@@ -2,7 +2,7 @@
 #                PROJECT                
 #=======================================
 
-cmake_minimum_required(VERSION 3.0)
+cmake_minimum_required(VERSION 3.16)
 project(CMAKENGINE VERSION 1.0 LANGUAGES CXX)
 
 #=======================================
@@ -11,9 +11,9 @@ project(CMAKENGINE VERSION 1.0 LANGUAGES CXX)
 
 # Create the executable.
 add_executable(
-	${PROJECT_NAME} 
-	CMAKENGINE/CMAKENGINE.cpp
-	)
+    ${PROJECT_NAME}
+    CMAKENGINE/CMAKENGINE.cpp
+    )
 
 #=======================================
 #                LIBRARY                
@@ -23,17 +23,33 @@ find_package(ModuleA REQUIRED)
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ModuleA::ModuleA)
 
-#target_include_directories(${PROJECT_NAME} PRIVATE ${MODULEA_INCLUDE_DIRS})
-#target_link_libraries(${PROJECT_NAME} PRIVATE ${MODULEA_LIBRARIES})
-
 #=======================================
 #                INSTALL
 #=======================================
 
 set(CMAKENGINE_RUNTIME_DESTINATION "bin")
 
-# Install the library.
+# Install the executable.
 install(
-        TARGETS ${PROJECT_NAME}
-        DESTINATION ${CMAKENGINE_RUNTIME_DESTINATION}
-        )
+    TARGETS ${PROJECT_NAME}
+    DESTINATION ${CMAKENGINE_RUNTIME_DESTINATION}
+    )
+
+# Install shared libraries
+install(
+    CODE [[
+        file(GET_RUNTIME_DEPENDENCIES
+            EXECUTABLES $<TARGET_FILE:CMAKENGINE>
+            RESOLVED_DEPENDENCIES_VAR CMAKENGINE_RDEP
+            UNRESOLVED_DEPENDENCIES_VAR CMAKENGINE_UDEP
+            DIRECTORIES ${CMAKE_PREFIX_PATH}/bin
+            POST_EXCLUDE_REGEXES system32|/x86_64-linux-gnu
+            )
+
+        file(INSTALL
+            DESTINATION "${CMAKE_INSTALL_PREFIX}/bin"
+            TYPE SHARED_LIBRARY
+            FILES ${CMAKENGINE_RDEP}
+            )
+    ]]
+)
